Avoid Hover effect on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,10 @@ footer {
         --margin: 0 1rem;
     }
 
+    .content-list.effect:hover {
+        transform: none;
+    }
+
     .content-list h1,
     .content-list a,
     .content-list p {
